--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -2,7 +2,6 @@
 @import 'src/styles/mixins.scss';
 
 .Menu {
-    display: block;
     overflow: hidden;
     width: $menu-width;
     margin: 0;
@@ -10,12 +9,18 @@
     background-color: $white;
     border-radius: $border-radius-default;
     box-shadow: $menu-shadow;
+    visibility: hidden;
+    opacity: 0;
+
+    transition: opacity $speed-default ease;
 
     .Item {
         display: flex;
         align-items: center;
         padding: $space-related;
         cursor: pointer;
+
+        transition: background-color $speed-default ease;
 
         &:hover {
             background-color: $hover-bg-color;
@@ -30,5 +35,12 @@
                 pointer-events: none;
             }
         }
+    }
+
+    // OPEN STATE
+
+    &.isOpen {
+        visibility: visible;
+        opacity: 1;
     }
 }
