--- a/src/components/Separator/Separator.module.scss
+++ b/src/components/Separator/Separator.module.scss
@@ -2,6 +2,7 @@
 @import 'src/styles/mixins.scss';
 
 .Separator {
+    display: block;
     margin: 0;
     margin-top: $space-small;
     padding: 0;
