--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -5,6 +5,7 @@
     overflow: hidden;
     width: $menu-width;
     margin: 0;
+    margin-top: $space-small;
     padding: 0;
     background-color: $white;
     border-radius: $border-radius-default;
@@ -18,6 +19,7 @@
         display: flex;
         align-items: center;
         padding: $space-related;
+        user-select: none;
         cursor: pointer;
 
         transition: background-color $speed-default ease;
