Added a portal and basic positioning of the menu on the DOM (no smart relocation since using Popper for this makes more sense but I have implement the functionality from scratch in the TriOptima Design System)

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -2,6 +2,7 @@
 @import 'src/styles/mixins.scss';
 
 .Menu {
+    position: absolute;
     overflow: hidden;
     width: $menu-width;
     margin: 0;
